# hackmhsctfvulnserver

./: .dockerignore  .env.example  Dockerfile  README.md  admin_store.py  compose.yml  config.py  main.py  pyproject.toml  requirements.txt  schemas.py
challenges/: admin_panel.py  broken_auth.py  cookie_role_toggle.py  id_guessing.py  path_traversal.py  sql_roulette.py  xss_practice.py
challenges/path_traversal_files/bobmcgee/: .bash_history  .bash_logout  .hidden
challenges/path_traversal_files/bobmcgee/.ssh/: id_rsa
challenges/path_traversal_files/bobmcgee/Desktop/: secrets.txt
challenges/path_traversal_files/bobmcgee/web/files/: contacts.csv  data.json  decoy_data.json  notes.txt  todo.txt
data/: admin_panel.db  admin_panel.db-shm  admin_panel.db-wal
ui/: banner.py
