[project]
name = "vulnerable-webserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.24",
]
